# ToDoLite

./: .flake8  README.md  manage.py  pyproject.toml
.github/workflows/: flake8.yml  mypy.yml
account/: admin.py  authentication.py  forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py
account/templates/account/: delete_profile.html  detail.html  register.html  register_done.html
account/templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html
tasks/: admin.py  forms.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_task_tags.py  0003_task_body.py
tasks/templates/: base.html
tasks/templates/tasks/: create.html  delete.html  detail.html  edit.html  home.html  list.html  search.html
tasks/templatetags/: tasks_tags.py
todolite/: asgi.py  settings.py  urls.py  wsgi.py
