[tool.poetry]
name = "todolite"
version = "0.1.0"
description = "Simple to-do list application"
authors = ["Pavel Filippi <pavel.filippi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.4"

[tool.poetry.dev-dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
